add banner section and some section of main section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Happy New Year 2024</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Google font here -->
 </head>
+
 <body>
-    heloo
+    <header>
+        <!-- Banner section start here -->
+        <section class="banner">
+            <div class="banner_shadow">
+                <div class="banner_text">
+                    <p>Happy New Year</p>
+                    <h2>New Year Party</h2>
+                    <h2>Celebration</h2>
+                </div>
+            </div>
+        </section>
+        <!-- Banner section end here -->
+
+    </header>
+    <main>
+        <!-- 65% OFF section start here  -->
+        <section>
+            <div class="off">
+                <h1>65% OFF</h1>
+                <p>OUR HOLIDAY DEALS ARE BETTER</p>
+                <h2>ALL CATEGORIES</h2>
+                <img src="resource/New Year Photo.png" width="600px" height="500px" alt="">
+            </div>
+        </section>
+        <!-- 65% OFF section end here  -->
+
+        <!-- welcome section start here  -->
+        <section>
+            <div class="welcome">
+                <div class="welcome-shadow">
+                    <div class="welcome-contant">
+                        <div class="welcome-text">
+                            <h2>Welcome to <br> midnight party</h2>
+                            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br>
+                                malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                            <button>Join Now</button>
+                        </div>
+                        <div class="welcome-img">
+                            <img src="resource/Group 70.png" width="200px" height="300px" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
