add welcome section, place and coming section

--- a/index.html
+++ b/index.html
@@ -10,51 +10,92 @@
 </head>
 
 <body>
-    <header>
-        <!-- Banner section start here -->
-        <section class="banner">
-            <div class="banner_shadow">
-                <div class="banner_text">
-                    <p>Happy New Year</p>
-                    <h2>New Year Party</h2>
-                    <h2>Celebration</h2>
+    <div class="container">
+        <header>
+            <!-- Banner section start here -->
+            <section class="banner">
+                <div class="banner_shadow">
+                    <div class="banner_text">
+                        <p>Happy New Year</p>
+                        <h2>New Year Party</h2>
+                        <h2>Celebration</h2>
+                    </div>
                 </div>
-            </div>
-        </section>
-        <!-- Banner section end here -->
+            </section>
+            <!-- Banner section end here -->
 
-    </header>
-    <main>
-        <!-- 65% OFF section start here  -->
-        <section>
-            <div class="off">
-                <h1>65% OFF</h1>
-                <p>OUR HOLIDAY DEALS ARE BETTER</p>
-                <h2>ALL CATEGORIES</h2>
-                <img src="resource/New Year Photo.png" width="600px" height="500px" alt="">
-            </div>
-        </section>
-        <!-- 65% OFF section end here  -->
+        </header>
+        <main>
+            <!-- 65% OFF section start here  -->
+            <section>
+                <div class="off">
+                    <h1>65% OFF</h1>
+                    <p>OUR HOLIDAY DEALS ARE BETTER</p>
+                    <h2>ALL CATEGORIES</h2>
+                    <img src="resource/New Year Photo.png" width="600px" height="500px" alt="">
+                </div>
+            </section>
+            <!-- 65% OFF section end here  -->
 
-        <!-- welcome section start here  -->
-        <section>
-            <div class="welcome">
-                <div class="welcome-shadow">
-                    <div class="welcome-contant">
-                        <div class="welcome-text">
-                            <h2>Welcome to <br> midnight party</h2>
-                            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br>
-                                malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-                            <button>Join Now</button>
-                        </div>
-                        <div class="welcome-img">
-                            <img src="resource/Group 70.png" width="200px" height="300px" alt="">
+            <!-- welcome section start here  -->
+            <section>
+                <div class="welcome">
+                    <div class="welcome-shadow">
+                        <div class="welcome-contant">
+                            <div class="welcome-text">
+                                <h2>Welcome to <br> midnight party</h2>
+                                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br>
+                                    malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                                <button>Join Now</button>
+                            </div>
+                            <div class="welcome-img">
+                                <img src="resource/Group 70.png" width="200px" height="300px" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+            <!-- welcome section end here  -->
 
+            <!-- Place section start here  -->
+            <section>
+                <div class="place-section">
+                    <h3><span class="spn">Place:</span> New Park Hotel</h3>
+                    <h3><span class="spn">Date:</span> 31 December Night 2023</h3>
+                    <h3><span class="spn">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+                    <button>Join Now</button>
+                </div>
+            </section>
+            <!-- Place section end here  -->
+
+            <!-- Coming section start here  -->
+            <section class="coming-sec">
+                <div class="coming-1">
+                    <h5>NEW BEST OFFER</h5>
+                    <h3>Coming Soon</h3>
+                    <p>
+                        Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas sed molestie <br>
+                        malesuada. Ipsum sed sodales risus ut <br> pellentesque vel euismod.
+                    </p>
+                </div>
+                <div class="coming-img">
+                    <div class="coming-2">
+                        <img src="resource/Ellipse 1.png" width="290px" height="290px" alt="">
+                    </div>
+                </div>
+                <div class="coming-3">
+                    <h3>2024</h3>
+                    <p>Dolor sit amet consectetur. <br>
+                        Consequat eget consectetur <br>
+                        maecenas sed.
+                    </p>
+                    <img src="resource/Group 96.png" width="100px" height="100px" alt="">
+                </div>
+            </section>
+            <!-- Coming section end here  -->
+
+
+    </div>
     </main>
     <footer>
 
