--- a/index.html
+++ b/index.html
@@ -94,6 +94,41 @@
             </section>
             <!-- Coming section end here  -->
 
+            <!-- holiday section start here  -->
+            <section>
+                <div class="holi-sec">
+                    <div class="holi-1">
+                        <h6>WHAT IS FUNCTIONAL</h6>
+                        <h1><span class="spn-1">Holidays</span> Sale 50%</h1>
+                        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus
+                            quam id fermentum amet amet sit consectetur.</p>
+                    </div>
+                    <div class="holi-2">
+                        <div class="holi-2-1">
+
+                        </div>
+                        <div class="holi-2-2">
+                            <img src="resource/Rectangle 1.png" alt="">
+                            <div class="offer-pic">
+                                <img src="resource/Group 44.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="holi-3">
+                        <div class="Rectangle">
+                            <img src="resource/Rectangle 2.png" alt="">
+                        </div>
+
+                         <div class="flower">
+                            <img src="resource/Group 75.png" width="600px" height="550px">
+                         </div>
+ 
+                    </div>
+                </div>
+            </section>
+            <!-- holiday section end here  -->
+
 
     </div>
     </main>
