add portfolio section

--- a/index.html
+++ b/index.html
@@ -120,14 +120,37 @@
                             <img src="resource/Rectangle 2.png" alt="">
                         </div>
 
-                         <div class="flower">
+                        <div class="flower">
                             <img src="resource/Group 75.png" width="600px" height="550px">
-                         </div>
- 
+                        </div>
+
                     </div>
                 </div>
             </section>
             <!-- holiday section end here  -->
+
+            <!-- portfolio section start here  -->
+            <section>
+                <div class="portfolio-text">
+                    <h5>THE BEST GIFTS</h5>
+                    <h3>Our Awesome Portfolio</h3>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.  </p>
+                    <p>Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                </div>
+                <div class="portfolio-img">
+                    <div class="portfolio-col-1">
+                        <div><img src="resource/Rectangle 3.png"  width="350px" height="320px" alt=""></div>
+                        <div><img src="resource/Rectangle 4.png"  width="350px" height="320px" alt=""></div>
+                        <div><img src="resource/Rectangle 5.png"  width="350px" height="320px" alt=""></div>
+                    </div>
+                    <div class="portfolio-col-2">
+                        <div><img src="resource/Rectangle 6.png"  width="350px" height="320px" alt=""></div>
+                        <div><img src="resource/Rectangle 7.png"  width="350px" height="320px" alt=""></div>
+                        <div><img src="resource/Rectangle 8.png"  width="350px" height="320px" alt=""></div>
+                    </div>
+                </div>
+            </section>
+            <!-- portfolio section end here  -->
 
 
     </div>
