add portfolio and subscribe section

--- a/index.html
+++ b/index.html
@@ -152,6 +152,18 @@
             </section>
             <!-- portfolio section end here  -->
 
+            <!-- subscribe section start here  -->
+            <section>
+                <div class="sub-sec">
+                    <img src="resource/Group 61.png" alt="">
+                    <h3>Subscribe Newsletter</h3>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    <input type="text" class="email" placeholder="Type your email here">
+                    <button class="sub-btn">Subscribe</button>
+                </div>
+            </section>
+            <!-- subscribe section end here  -->
+
 
     </div>
     </main>
