--- a/index.html
+++ b/index.html
@@ -134,19 +134,19 @@
                 <div class="portfolio-text">
                     <h5>THE BEST GIFTS</h5>
                     <h3>Our Awesome Portfolio</h3>
-                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.  </p>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. </p>
                     <p>Ipsum sed sodales risus ut pellentesque vel euismod.</p>
                 </div>
                 <div class="portfolio-img">
                     <div class="portfolio-col-1">
-                        <div><img src="resource/Rectangle 3.png"  width="350px" height="320px" alt=""></div>
-                        <div><img src="resource/Rectangle 4.png"  width="350px" height="320px" alt=""></div>
-                        <div><img src="resource/Rectangle 5.png"  width="350px" height="320px" alt=""></div>
+                        <div><img src="resource/Rectangle 3.png" width="350px" height="320px" alt=""></div>
+                        <div><img src="resource/Rectangle 4.png" width="350px" height="320px" alt=""></div>
+                        <div><img src="resource/Rectangle 5.png" width="350px" height="320px" alt=""></div>
                     </div>
                     <div class="portfolio-col-2">
-                        <div><img src="resource/Rectangle 6.png"  width="350px" height="320px" alt=""></div>
-                        <div><img src="resource/Rectangle 7.png"  width="350px" height="320px" alt=""></div>
-                        <div><img src="resource/Rectangle 8.png"  width="350px" height="320px" alt=""></div>
+                        <div><img src="resource/Rectangle 6.png" width="350px" height="320px" alt=""></div>
+                        <div><img src="resource/Rectangle 7.png" width="350px" height="320px" alt=""></div>
+                        <div><img src="resource/Rectangle 8.png" width="350px" height="320px" alt=""></div>
                     </div>
                 </div>
             </section>
@@ -157,18 +157,44 @@
                 <div class="sub-sec">
                     <img src="resource/Group 61.png" alt="">
                     <h3>Subscribe Newsletter</h3>
-                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br>
+                        Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                     <input type="text" class="email" placeholder="Type your email here">
                     <button class="sub-btn">Subscribe</button>
                 </div>
             </section>
             <!-- subscribe section end here  -->
-
-
     </div>
     </main>
     <footer>
-
+        <section>
+            <div class="footer">
+                <div class="footer-contant-1">
+                    <p>44, Big Building Roosevelt Street <br>
+                        Beach Gardens Florida 33410</p>
+                    <div>
+                        <img src="resource/Call.png" alt="">
+                        <p>+00 245 445 968</p>
+                    </div>
+                    <div>
+                        <img src="resource/Website.png" alt="">
+                        <p>www.website.com</p>
+                    </div>
+                </div>
+                <hr class="hr">
+                <div class="footer-contant-2">
+                    <img src="resource/Facebook.png" alt="">
+                    <img src="resource/Instagram.png" alt="">
+                    <img src="resource/Twitter.png" alt="">
+                    <img src="resource/Linkedin.png" alt="">
+                </div>
+                <hr class="hr">
+                <div class="footer-contant-3">
+                    <p>2017, All Rights Reserved.</p>
+                    <p>Unsubscribe</p>
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 
